Change local username

--- a/views/connect-local.jade
+++ b/views/connect-local.jade
@@ -7,8 +7,8 @@ html
 	.container
 		form(action="/connect/local" method="post")
 			.form-group
-				label Email
-				input(type="text" class="form-control" name="email")
+				label Username
+				input(type="text" class="form-control" name="username")
 			.form-group
 				label Password
 				input(type="password" class="form-control" name="password")
