--- a/views/connect-local.jade
+++ b/views/connect-local.jade
@@ -1,15 +1,13 @@
-html
-	head
-		title= title
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css', rel='stylesheet', media='screen')
-	body
-	.container
-		form(action="/connect/local" method="post")
-			.form-group
-				label Username
-				input(type="text" class="form-control" name="username")
-			.form-group
-				label Password
-				input(type="password" class="form-control" name="password")
-			button(type="submit") Signup
+extends ./layout
+block content
+	.container.centered
+		.row
+			.col-md-8.col-md-offset-2
+				form(action="/connect/local" method="post")
+					.form-group
+						label Username
+						input(type="text" class="form-control" name="username" placeholder="Username")
+					.form-group
+						label Password
+						input(type="password" class="form-control" name="password" placeholder="Password")
+					button(type="submit") Signup
