--- a/views/login.jade
+++ b/views/login.jade
@@ -1,22 +1,21 @@
-html
-	head
-		title= title
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css', rel='stylesheet', media='screen')
-	body
-	.container
-		form(action="/login" method="post")
-			.form-group
-				label Username
-				input(type="text" class="form-control" name="username")
-			.form-group
-				label Password
-				input(type="password" class="form-control" name="password")
-			button(type="submit") Login
-		hr
-		br
-		p
-			a(href="/signup") Signup
-		br
-		p
-			a(href="/") Home
+extends layout
+
+block content
+
+    .container.centered
+        .row
+            .col-md-8.col-md-offset-2
+                form(action="/login" method="post")
+                    .form-group
+                        label Username
+                        input(type="text" class="form-control" name="username" placeholder="Username")
+                    .form-group
+                        label Password
+                        input(type="password" class="form-control" name="password" placeholder="Password")
+                    button(type="submit") Login
+                    hr
+        .row
+            .col-md-6.centered
+                a(href="/signup") Signup
+            .col-md-6.centered
+                a(href="/") Home
