--- a/views/home.jade
+++ b/views/home.jade
@@ -1,9 +1,10 @@
 extends layout-home
 block content
-    //.container
+    .container
         .row
-            .col-md-12
-                a(href='/red') Node-red
+            .col-md-12.centered
+                a(href='/red')
+                    h1 Node-red
     .container
         .row
             h2.centered.mb
