--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html
     body
         #h
             .logo
-                img(src='http://lorempixel.com/80/80/')
+                img(src='/assets/img/logo.png' style="width: 80px; height: 80px;")
             block content
         .container.mt
             .row.mt.centered
@@ -24,36 +24,56 @@ html
                     p
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     p
-                        i.ion-email
-                        i.ion-social-facebook
-                        i.ion-earth
+                        a(href="#")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-earth
                 .col-lg-3
                     img.img-circle(src='assets/img/rd.jpg', width='140', alt='')
                     h4 Renato Duarte
                     p
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     p
-                        i.ion-email
-                        i.ion-social-facebook
-                        i.ion-earth
+                        a(href="#")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-earth
                 .col-lg-3
                     img.img-circle(src='assets/img/rm.jpg', width='140', alt='')
                     h4 Ricardo Mendes
                     p
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     p
-                        i.ion-email
-                        i.ion-social-facebook
-                        i.ion-earth
+                        a(href="#")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-earth
                 .col-lg-3
                     img.img-circle(src='assets/img/td.jpg', width='140', alt='')
                     h4 Tiago Duarte
                     p
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     p
-                        i.ion-email
-                        i.ion-social-facebook
-                        i.ion-earth
+                        a(href="#")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="#")
+                            i.ion-earth
         #f
             .container
                 .row.centered
