--- a/views/layout-home.jade
+++ b/views/layout-home.jade
@@ -12,7 +12,6 @@ html
         link(href="/assets/css/ionicons.min.css" rel="stylesheet")
         link(href="/assets/css/style.css" rel="stylesheet")
     body
-
         nav.navbar.navbar-default(style="background-color:#a0af0a;")
             .container
                 // Brand and toggle get grouped for better mobile display
@@ -24,7 +23,8 @@ html
                         span.icon-bar
                     .logo
                         a.navbar-brand(href='/home')
-                            img(src='http://lorempixel.com/30/30/')
+                            img(src='/assets/img/logo.png' style="width: 30px; height: 30px;")
+                            |  ES
 
                 // Collect the nav links, forms, and other content for toggling
                 #navbar-collapse.collapse.navbar-collapse
