--- a/views/index.jade
+++ b/views/index.jade
@@ -9,27 +9,33 @@ block content
             .col-sm-8.col-md-offset-2
                 .row
                     .col-sm-4
-                        a(href='/login')
+                        a(href='/login').btn-white
                             i.ion-locked
-                            p Local Login
+                            br
+                            | Local Login
                     .col-sm-4
-                        a(href='/signup')
+                        a(href='/signup').btn-white
                             i.ion-locked
-                            p Local Signup
+                            br
+                            | Local Signup
                     .col-sm-4
-                        a(href='/auth/facebook')
+                        a(href='/auth/facebook').btn-white
                             i.ion-social-facebook
-                            p Facebook
+                            br
+                            | Facebook
                 .row
                     .col-sm-4
-                        a(href='/auth/twitter')
+                        a(href='/auth/twitter').btn-white
                             i.ion-social-twitter
-                            p Twitter
+                            br
+                            | Twitter
                     .col-sm-4
-                        a(href='/auth/google')
+                        a(href='/auth/google').btn-white
                             i.ion-social-googleplus
-                            p Google+
+                            br
+                            | Google+
                     .col-sm-4
-                        a(href='http://www.ua.pt')
+                        a(href='http://www.ua.pt').btn-white
                             i.ion-university
-                            p UA
+                            br
+                            | UA
