--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,72 +19,84 @@ html
         .container.mt
             .row.mt.centered
                 .col-lg-3
-                    img.img-circle(src='assets/img/pb.jpg', width='140', alt='')
-                    h4 Pedro Bordonhos
-                    p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    p
-                        a(href="#")
-                            i.ion-email
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-social-facebook
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-earth
-                .col-lg-3
-                    img.img-circle(src='assets/img/rd.jpg', width='140', alt='')
-                    h4 Renato Duarte
-                    p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    p
-                        a(href="#")
-                            i.ion-email
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-social-facebook
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-earth
-                .col-lg-3
-                    img.img-circle(src='assets/img/rm.jpg', width='140', alt='')
-                    h4 Ricardo Mendes
-                    p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    p
-                        a(href="#")
-                            i.ion-email
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-social-facebook
-                        | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-earth
-                .col-lg-3
-                    img.img-circle(src='assets/img/td.jpg', width='140', alt='')
+                    img.img-circle(src='assets/img/td.png', width='140', alt='')
                     h4 Tiago Duarte
                     p
                         | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     p
-                        a(href="#")
+                        a(href="mailto:tiagoduarte21@gmail.com")
                             i.ion-email
                         | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
+                        a(href="https://www.facebook.com/tiagoduarte21")
                             i.ion-social-facebook
                         | &nbsp;&nbsp;&nbsp;
-                        a(href="#")
-                            i.ion-earth
+                        a(href="https://pt.linkedin.com/in/tiagoduarte21")
+                            i.ion-social-linkedin
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://github.com/tiagoduarte21")
+                            i.ion-social-github
+                .col-lg-3
+                    img.img-circle(src='assets/img/rd.png', width='140', alt='')
+                    h4 Renato Duarte
+                    p
+                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    p
+                        a(href="mailto:renato.duarte@ua.pt")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://www.facebook.com/rntdrt")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://pt.linkedin.com/in/renato-duarte-886a955b")
+                            i.ion-social-linkedin
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://github.com/rntdrts")
+                            i.ion-social-github
+                .col-lg-3
+                    img.img-circle(src='assets/img/rm.png', width='140', alt='')
+                    h4 Ricardo Mendes
+                    p
+                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    p
+                        a(href="mailto:ricardo.mendes@ua.pt")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://www.facebook.com/ricardomendex")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://www.linkedin.com/profile/view?id=241021409")
+                            i.ion-social-linkedin
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://github.com/rdrm2014")
+                            i.ion-social-github
+                .col-lg-3
+                    img.img-circle(src='assets/img/pb.png', width='140', alt='')
+                    h4 Pedro Bordonhos
+                    p
+                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    p
+                        a(href="mailto:bordonhos@ua.pt")
+                            i.ion-email
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://www.facebook.com/bordonhos")
+                            i.ion-social-facebook
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://pt.linkedin.com/in/pedro-bordonhos-57225153")
+                            i.ion-social-linkedin
+                        | &nbsp;&nbsp;&nbsp;
+                        a(href="https://github.com/bordonhos")
+                            i.ion-social-github
         #f
             .container
                 .row.centered
                     .col-md-12
-                        a(href='#')
+                        a(href='#').btn-white
                             i.ion-social-facebook
-                        a(href='#')
+                        a(href='#').btn-white
                             i.ion-social-twitter
-                        a(href='#')
+                        a(href='#').btn-white
                             i.ion-social-googleplus
-                        a(href='http://www.ua.pt')
+                        a(href='http://www.ua.pt').btn-white
                             i.ion-university
 
 
